deploy/base/openehr-nodes/mumc/federation-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumc-federation-rest
  labels:
    app: mumc-federation-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mumc-federation-rest
  template:
    metadata:
      labels:
        app: mumc-federation-rest
    spec:
      containers:
        - name: mumc-federation-rest
          image: registry.prod.dh.unimaas.nl/docker-health/federation-rest:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /code/logs/mumc
              subPath: mumc/federation-rest
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: log-pvc-mumc
