deploy/base/openehr-nodes/mumc/federation-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mumc-federation-rest
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: mumc-federation-rest
